Fix alignment of art, play, and queue buttons.

--- a/src/components/musicPlayer/musicPlayer.css
+++ b/src/components/musicPlayer/musicPlayer.css
@@ -11,3 +11,7 @@
   background-color: #282c34;
   color: whitesmoke;
 }
+
+.MusicPlayer .level .level-item {
+  flex: 1;
+}
